--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
 									<h3>Ceremonia civil y religiosa 💒</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>Por definir</span>
-										<span>16h00</span>
+										<span>Inicio: Por definir</span>
+										<span>Fin: 16h30</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Sábado 26</span>
-										<span>Agosto 2023</span>
+										<span>Sábado </span>
+										<span>26-08-2023</span>
 									</div>
-									<p>En el <a href="https://goo.gl/maps/DCNQrTkBfAJ4zUaa6" target="_blank">ayuntamiento</a> del distrito 5 de París y luego en la <a href="https://goo.gl/maps/C2ZgK1cMG7oqUrDSA" target="_blank">iglesia</a> Saint-Étienne-du-Mont, a 200m del ayuntamiento.</p>
+									<p>Primero en el <a href="https://goo.gl/maps/DCNQrTkBfAJ4zUaa6" target="_blank">Ayuntamiento</a> del distrito 5 de París y a continuación en la <a href="https://goo.gl/maps/C2ZgK1cMG7oqUrDSA" target="_blank">iglesia</a> Saint-Étienne-du-Mont, a 200 metros del ayuntamiento.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
@@ -141,97 +141,19 @@
 									<h3>Cóctel y cena 🏰</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>17h00</span>
-										<span>03h00</span>
+										<span>Inicio: 17h30</span>
+										<span>Fin: 03h00</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Sábado 26</span>
-										<span>Agosto 2023</span>
+										<span>Sábado </span>
+										<span>26-08-2023</span>
 									</div>
 									<p>En el <a href="https://goo.gl/maps/hCwc8ERo1k1yoL9u9" target="_blank">castillo</a> de Lésigny, a unos 30 minutos de París en coche o autobús.</p>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-couple-story"  style="padding-top: 50px !important; padding-bottom: 50px !important;">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Propuestas de alojamiento</span>
-					<h2>¿Dónde pasar la noche?</h2>
-					<p> Muchos de vosotros venís desde muy lejos, por lo que os aconsejamos reservar uno de los siguientes hoteles :</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12 col-md-offset-0">
-					<ul class="timeline animate-box">
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/ibis.png);"></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title"><a href="https://all.accor.com/hotel/1743/index.fr.shtml#origin=accor" target="_blank">Hôtel Ibis Bercy Village</a></h3>
-									<span class="date">París centro, 30km del castillo</span>
-								</div>
-								<div class="timeline-body">
-									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este es el hotel que más os recomendamos para 2 personas ya que se sitúa en la zona más cercana a la parada final del autobús y porque es una buena opción para visitar París. </p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title"><a href="https://www.adagio-city.com/fr/booking/aparthotels-list.shtml?q=Aparthotel+Adagio+Paris+Bercy+Village&isAutocomplete=true&hotelDirectId=6789&apartment%5B%5D=2%2C0%2C0%2CXXUBQLAz9R" target="_blank">Aparthotel Adagio Paris Bercy Village</a></h3>
-									<span class="date">París centro, 30km del castillo</span>
-								</div>
-								<div class="timeline-body">
-									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este apartahotel tiene precios económicos y conviene a familias y grupos de amigos. Además se sitúa en el mismo edifcio que el Ibis. </p>
-								</div>
-							</div>
-						</li>
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/campa.png);"></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title"><a href="https://www.hotelbercy.com/" target="_blank">Hôtel Campanile Paris Bercy</a></h3>
-									<span class="date">París centro, 30km del castillo</span>
-								</div>
-								<div class="timeline-body">
-									<p>Para los que quieran quedarse en París centro, un autobús gratuito estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este hotel es similar al Ibis pero está peor situado. Proponemos esta opción si no queda sitio en el Ibis.</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title"><a href="https://www.golflesigny.com/" target="_blank">Hôtel Abbaye du golf de Lésigny</a></h3>
-									<span class="date">2km del castillo</span>
-								</div>
-								<div class="timeline-body">
-									<p>Un minibús estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel está construido en una antigua abadía del siglo XII y rodeado de un espacio verde de 100 hectáreas del Golf du Réveillon. </p>
-								</div>
-							</div>
-						</li>
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title"><a href="https://brie-comte-robert.kyriad.com/fr-fr/" target="_blank">Kyriad Brie Comte Robert</a></h3>
-									<span class="date">6km del castillo</span>
-								</div>
-								<div class="timeline-body">
-									<p>Un minibús estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximativo 50 euros). Este hotel restaurante Kyriad Brie-Comte-Robert está situado cerca del hotel precedente y ofrece precios más económicos.</p>
-								</div>
-							</div>
-						</li>
-			    	</ul>
 				</div>
 			</div>
 		</div>
@@ -275,10 +197,10 @@
 							<h3>Ir al castillo y volver al hotel</h3>
 							<p>
 								<ul>
-									<li>Un autobús llevará prioritariamente a los invitados que vienen a París en avión, que no disponen de coche y que no conocen la ciudad de París. Este autobús realizará una ida al castillo desde la iglesia.</li>
+									<li>Un autobús gratuito contratado por los novios llevará prioritariamente a los invitados que vienen a París en avión, que no disponen de coche y que no conocen la ciudad de París. Este autobús realizará una ida al castillo desde la iglesia.</li>
 									<li>Al final de la boda el mismo autobús hará un único viaje de vuelta desde el castillo hasta la zona hotelera de Bercy. </li>
 									<li>Si venís en vuestro propio coche, hay un párking gratuito en el recinto del castillo.</li>
-									<li>Para los que pernocten cerca del castillo, un automóvil de capacidad de 8 personas estará disponible a lo largo de toda la noche. Es importante saber que si dormís en los hoteles cercanos al castillo, la vuelta a París al día siguiente se deberá realizar en coche o en taxi.</li>
+									<li>Para los que pernocten cerca del castillo, un minibús estará disponible a lo largo de toda la noche. Es importante saber que si dormís en los hoteles cercanos al castillo, la vuelta a París al día siguiente se deberá realizar en coche o en taxi.</li>
 								</ul> 
 							</p>
 						</div>
@@ -292,7 +214,7 @@
 							<h3>Avión</h3>
 							<p>Os recomendamos reservar el vuelo a París lo antes posible para conseguir los billetes a un precio asequible. La venta de billetes suele abrir unos 6 meses antes del vuelo. 
 								<ul>
-									<li>On recomendamos volar con las compañías Vueling (eropuerto Charles de Gaule) o Transavia (aeropuerto Orly) ya que los aeropuertos se sitúan relativamente cerca de París.</li>
+									<li>Os recomendamos volar con las compañías Vueling (aeropuerto Charles de Gaule) o Transavia (aeropuerto Orly) ya que los aeropuertos se sitúan relativamente cerca de París.</li>
 									<li>Existe la opción de volar con Ryanair (aeropuerto Beauvais), pero el aeropuerto se sitúa muy lejos y por ello la desaconsejamos. </li>
 								</ul> 
 							</p>
@@ -307,6 +229,84 @@
 			</div>
 
 			
+		</div>
+	</div>
+
+	<div id="fh5co-couple-story"  style="padding-top: 50px !important; padding-bottom: 50px !important;">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+					<span>Propuestas de alojamiento</span>
+					<h2>¿Dónde pasar la noche?</h2>
+					<p> Muchos de vosotros venís desde muy lejos, por lo que os aconsejamos reservar uno de los siguientes hoteles :</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0">
+					<ul class="timeline animate-box">
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/ibis.png);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"><a href="https://all.accor.com/hotel/1743/index.fr.shtml#origin=accor" target="_blank">Hôtel Ibis Bercy Village</a></h3>
+									<span class="date">París centro, 30km del castillo</span>
+								</div>
+								<div class="timeline-body">
+									<p>Para los que quieran quedarse en París centro, un autobús gratuito contratado por los novios estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este es el hotel que más os recomendamos para 2 personas ya que se sitúa en la zona más cercana a la parada final del autobús y porque es una buena opción para visitar París. </p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"><a href="https://www.adagio-city.com/fr/booking/aparthotels-list.shtml?q=Aparthotel+Adagio+Paris+Bercy+Village&isAutocomplete=true&hotelDirectId=6789&apartment%5B%5D=2%2C0%2C0%2CXXUBQLAz9R" target="_blank">Aparthotel Adagio Paris Bercy Village</a></h3>
+									<span class="date">París centro, 30km del castillo</span>
+								</div>
+								<div class="timeline-body">
+									<p>Para los que quieran quedarse en París centro, un autobús gratuito contratado por los novios estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este apartahotel tiene precios económicos y es ideal para familias y grupos de amigos. Además se sitúa en el mismo edifcio que el Ibis. </p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/campa.png);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"><a href="https://www.hotelbercy.com/" target="_blank">Hôtel Campanile Paris Bercy</a></h3>
+									<span class="date">París centro, 30km del castillo</span>
+								</div>
+								<div class="timeline-body">
+									<p>Para los que quieran quedarse en París centro, un autobús gratuito contratado por los novios estará previsto para desplazar a los invitados a la zona del barrio de Bercy al final de la velada. Este hotel es similar al Ibis pero está peor situado. Proponemos esta opción si no queda sitio en el Ibis.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"><a href="https://www.golflesigny.com/" target="_blank">Hôtel Abbaye du golf de Lésigny</a></h3>
+									<span class="date">2km del castillo</span>
+								</div>
+								<div class="timeline-body">
+									<p>Un minibús estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximado 50 euros). Este hotel está construido en una antigua abadía del siglo XII y rodeado de un espacio verde de 100 hectáreas del Golf du Réveillon. </p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"><a href="https://brie-comte-robert.kyriad.com/fr-fr/" target="_blank">Kyriad Brie Comte Robert</a></h3>
+									<span class="date">6km del castillo</span>
+								</div>
+								<div class="timeline-body">
+									<p>Un minibús estará disponible a lo largo de la noche para los invitados que se alojen cerca del castillo. La vuelta a París centro al día siguiente no la gestionarían los novios. Hay taxis disponbiles en la zona (precio aproximado 50 euros). Este hotel restaurante Kyriad Brie-Comte-Robert está situado cerca del hotel anteriormente mencionado y ofrece precios más económicos.</p>
+								</div>
+							</div>
+						</li>
+			    	</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 
