--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>¿Asistiréis a nuestro enlace?</h2>
 					<p>Si habéis recibido esta invitación de parte de los novios, os agradeceríamos que completéis el siguiente formulario para confirmar asistencia máximo con <b><u>3 meses</u></b> de antelación 🤗</p>
-					<p><b><u>IBAN:</u></b> FR76 4061 8803 8600 0403 4451 171 &nbsp &nbsp <b><u>BIC:</u></b> BOUS FRPP XXX</p>
+					<p><b><u>IBAN:</u></b><br />FR76 4061 8803 8600 0403 4451 171 &nbsp &nbsp <b><u><br />BIC:</u></b> BOUS FRPP XXX</p>
 				</div>
 			</div>
 			<div class="row animate-box">
