--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="name" class="sr-only">Nombre de los invitados</label>
-								<input type="name" class="form-control" id="name" placeholder="Noms des invités">
+								<input type="name" class="form-control" id="name" placeholder="Nombre de los invitados">
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
@@ -363,7 +363,7 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="food" class="sr-only">Restricciones alimentarias</label>
-								<input type="food" class="form-control" id="food" placeholder="Restrictions alimentaires">
+								<input type="food" class="form-control" id="food" placeholder="Restrictiones alimentarias">
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4 center">
