--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
 				<div class="col-md-6 animate-box">
 					<iframe src="https://player.vimeo.com/video/743428407?h=6083d241d5&amp;title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="889" height="500" class="video-mobile" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="file.mp4"></iframe>
 				</div>
+				<div class="col-md-6 animate-box">
+					<iframe src="https://player.vimeo.com/video/745544285?h=6083d241d5&amp;title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="889" height="500" class="video-mobile" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="file.mp4"></iframe>
+				</div>
 			</div>
 
 			
