--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="email" class="sr-only">Email</label>
-								<input required type="email" class="form-control" id="email" placeholder="Email">
+								<input required type="email" class="form-control" id="email" placeholder="E-mail">
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
@@ -388,7 +388,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2023 Jérôme et Lucía. All Rights Reserved.</small> 
+						<small class="block">&copy; 2023 Jérôme et Lucía ❤️</small> 
 					</p>
 				</div>
 			</div>
