--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 									<h3>Ceremonia civil y religiosa 💒</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>Inicio: 16h00</span>
-										<span>Fin: 17h00</span>
+										<span>Ayuntamiento: 12h00</span>
+										<span>Iglesia: 16h00</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -179,11 +179,11 @@
 							<h3>Ir al ayuntamiento y a la iglesia</h3>
 							<p> Ambos sitios se sitúan en la plaza del Panteón. En el distrito 5 de París. 
 								<ul>
-									<li>Os aconsejamos utilizar la aplicación Citymapper para desplazaros. Desde allí podéis ver cuál es el mejor itinerario para llegar hasta la plaza del Panteón.</li>
+									<li>Os aconsejamos utilizar la aplicación <a href="https://citymapper.com/paris" target="_blank">Citymapper</a> para desplazaros. Desde allí podéis ver cuál es el mejor itinerario para llegar hasta la plaza del Panteón.</li>
 									<li>Las estaciones de metro más cercanas son la línea 10 (parada Maubert-Mutualité o parada Cardinal Lemoine), la línea 7 (parada Place Monge + 10 minutos a pie) o la línea del RER B (Parada Luxembourg).</li>
 									<li> En cuanto a los autobuses, la línea 24 va de la zona de Bercy hasta la zona del Panteón (Parada Panteón). </li>
 									<li>También podéis pedir un taxi, Uber, Bolt, Freenow, etc. </li>
-									<li>Si venís en vuestro propio coche, hay un párking de pago cerca del Panteón.</li>
+									<li>Si venís en vuestro propio coche, hay un párking de pago cerca del Panteón (<a href="https://goo.gl/maps/UqWwKaMGMW6pRbqGA" target="_blank">rue Soufflot</a>).</li>
 								</ul> 
 							</p>
 						</div>
