--- a/index.html
+++ b/index.html
@@ -354,13 +354,13 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="name" class="sr-only">Nombre de los invitados</label>
-								<input required type="name" class="form-control" id="name" placeholder="Nombre de los invitados">
+								<input required type="name" class="form-control" id="name" placeholder="Nombre de cada invitado">
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="email" class="sr-only">Email</label>
-								<input required type="email" class="form-control" id="email" placeholder="E-mail">
+								<input required type="email" class="form-control" id="email" placeholder="Número de personnas en el autobús">
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
