--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="email" class="sr-only">Email</label>
-								<input required type="email" class="form-control" id="email" placeholder="Número de personnas en el autobús">
+								<input required type="email" class="form-control" id="email" placeholder="N° de personnas en el autobús">
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
